--- a/AIML_Module_01_Lab_04_Transforming_data_using_linear_algebra.ipynb
+++ b/AIML_Module_01_Lab_04_Transforming_data_using_linear_algebra.ipynb
@@ -811,11 +811,11 @@
         "    print(f\"{name} Transform: Accuracy = {acc:.4f}\")"
       ],
       "metadata": {
-        "id": "yf5a2nwEEH2Y",
-        "outputId": "836e94ac-63e0-49d7-8466-545a6a0dbff7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yf5a2nwEEH2Y",
+        "outputId": "836e94ac-63e0-49d7-8466-545a6a0dbff7"
       },
       "execution_count": 29,
       "outputs": [
@@ -899,11 +899,11 @@
         "    print(f\"Accuracy with features {i} and {j}: {acc:.4f}\")"
       ],
       "metadata": {
-        "id": "lPMnR0FhCsUL",
-        "outputId": "45e4a2f8-0a56-48c6-c85a-bca5c1cf2b8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lPMnR0FhCsUL",
+        "outputId": "45e4a2f8-0a56-48c6-c85a-bca5c1cf2b8f"
       },
       "execution_count": 31,
       "outputs": [
@@ -929,6 +929,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In this exercise, I investigated whether using all 4 features from the Iris dataset is the best strategy, or if using just 2 features at a time could give better accuracy. I tried different 2-feature combinations and trained a KNN classifier on each. Then, I compared the results with the model that used all 4 features.\n",
+        "The goal was to see if selecting the most relevant features can improve performance, instead of using all features blindly."
+      ],
+      "metadata": {
+        "id": "xeTvt_mnJmNY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -938,12 +948,12 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "# Load dataset\n",
+        "# Load the dataset\n",
         "iris = load_iris()\n",
         "X = iris.data\n",
         "y = iris.target\n",
         "\n",
-        "# Train/test split\n",
+        "# Train-test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
         "# Accuracy using all 4 features\n",
@@ -953,29 +963,31 @@
         "print(f\"Accuracy with all 4 features: {acc_all:.4f}\")\n",
         "\n",
         "# Try all 2-feature combinations\n",
-        "feature_indices = [0, 1, 2, 3]\n",
-        "combos = list(combinations(feature_indices, 2))\n",
+        "feature_pairs = list(combinations(range(4), 2))\n",
         "\n",
-        "for i, j in combos:\n",
+        "print(\"\\nAccuracy with 2-feature combinations:\")\n",
+        "for i, j in feature_pairs:\n",
         "    model = KNeighborsClassifier()\n",
         "    model.fit(X_train[:, [i, j]], y_train)\n",
         "    acc = accuracy_score(y_test, model.predict(X_test[:, [i, j]]))\n",
         "    print(f\"Features ({i}, {j}) -> Accuracy: {acc:.4f}\")"
       ],
       "metadata": {
-        "id": "xC-_sSs1Fxu2",
-        "outputId": "ac3636a1-e467-4cf6-f07e-f7c779cf1678",
+        "id": "x7IrmaOyJIbX",
+        "outputId": "86866779-3294-4f90-dfa5-5e38292de239",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Accuracy with all 4 features: 1.0000\n",
+            "\n",
+            "Accuracy with 2-feature combinations:\n",
             "Features (0, 1) -> Accuracy: 0.8000\n",
             "Features (0, 2) -> Accuracy: 0.9667\n",
             "Features (0, 3) -> Accuracy: 0.9667\n",
@@ -990,12 +1002,20 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Exercise\n",
+        "Conclusion\n",
         "\n",
-        "I tested whether using all 4 features is the best strategy by comparing it with models trained using only 2 features at a time. Some 2-feature combinations gave similar or better accuracy than using all 4, which shows that fewer but more relevant features can sometimes improve model performance."
+        "\n",
+        "Based on the results, some 2-feature combinations gave accuracy close to or even better than using all 4 features. This shows that using all features at once is not always the best strategy, and selecting the right features can improve the model's performance while keeping it simple."
       ],
       "metadata": {
-        "id": "_AfS3nmpGNti"
+        "id": "gwc-LErNJsbQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "xzhoxeM3JUDd"
       }
     },
     {
