--- a/AIML_Module_01_Lab_03_Data_Augmentation.ipynb
+++ b/AIML_Module_01_Lab_03_Data_Augmentation.ipynb
@@ -1119,12 +1119,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "hLzmZXtWC9Ue",
-        "outputId": "350b6083-7188-4d43-b3b0-ebcca52f9f6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 164
-        }
+        },
+        "id": "hLzmZXtWC9Ue",
+        "outputId": "350b6083-7188-4d43-b3b0-ebcca52f9f6c"
       },
       "execution_count": 45,
       "outputs": [
@@ -1162,6 +1162,15 @@
       ],
       "metadata": {
         "id": "stpodFCFDEj_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.Answer"
+      ],
+      "metadata": {
+        "id": "OKX4EuPGLOuY"
       }
     },
     {
@@ -1239,12 +1248,12 @@
         "        break"
       ],
       "metadata": {
-        "id": "kd6owkOSJOvM",
-        "outputId": "ce869947-dfc8-4c85-d147-091b268fa582",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 518
-        }
+        },
+        "id": "kd6owkOSJOvM",
+        "outputId": "ce869947-dfc8-4c85-d147-091b268fa582"
       },
       "execution_count": 52,
       "outputs": [
@@ -1374,12 +1383,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "02WMNdwtFhjB",
-        "outputId": "f85ab7fc-2ea8-43f2-82bc-75c9982712c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 619
-        }
+        },
+        "id": "02WMNdwtFhjB",
+        "outputId": "f85ab7fc-2ea8-43f2-82bc-75c9982712c6"
       },
       "execution_count": 48,
       "outputs": [
