--- a/AIML_Module_02_Lab_01_Basic_Plots.ipynb
+++ b/AIML_Module_02_Lab_01_Basic_Plots.ipynb
@@ -1009,6 +1009,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Exercise:"
+      ],
+      "metadata": {
+        "id": "elR4RIg-XO3a"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import seaborn as sns\n",
