--- a/AIML_May_2025_Module_3_Lab_2_Using_KNN_for_Text_Classification.ipynb
+++ b/AIML_May_2025_Module_3_Lab_2_Using_KNN_for_Text_Classification.ipynb
@@ -2349,10 +2349,41 @@
         "1. The result may not be a real word (e.g., “studies” → “studi”).\n",
         "\n",
         "\n",
-        "2. It does not check grammar or meaning, so it can be less accurate."
+        "2. It does not check grammar or meaning, so it can be less accurate.\n",
+        "\n",
+        "\n",
+        "Lemmatization:\n",
+        "\n",
+        "Lemmatization changes a word into its proper dictionary form (called lemma) using grammar rules.\n",
+        "\n",
+        "Example: “studies” → “study”, “playing” → “play”.\n",
+        "\n",
+        "\n",
+        "Pros:\n",
+        "\n",
+        "1. More accurate than stemming because it gives proper words.\n",
+        "\n",
+        "\n",
+        "2. Considers grammar and meaning.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Cons:\n",
+        "\n",
+        "1. Slower because it uses dictionary and grammar rules.\n",
+        "\n",
+        "\n",
+        "2. Needs more processing."
       ],
       "metadata": {
         "id": "VddDKVVhOR-s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "0f77zFbcPDlW"
       }
     },
     {
