--- a/AIML_Project_Module_2.ipynb
+++ b/AIML_Project_Module_2.ipynb
@@ -220,18 +220,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
       "metadata": {
-        "id": "pOGF9InHy4Hh"
+        "id": "IfZYG8IxoFLZ"
       },
+      "source": [
+        "k=7\n",
+        "big_matrix = []\n",
+        "sequences_name = []\n",
+        "\n",
+        "fasta_sequences = SeqIO.parse(open(\"sequences.fasta\"),'fasta')\n",
+        "\n",
+        "for fasta in tqdm(fasta_sequences):\n",
+        "\n",
+        "    embedding = np.zeros(4**k, dtype=int)\n",
+        "    sequence = str(fasta.seq)\n",
+        "    sequence_name = fasta.id\n",
+        "    sequences_name.append(sequence_name)\n",
+        "\n",
+        "    for j in range(len(sequence)-k+1):\n",
+        "        kmer = sequence[j:j+k]\n",
+        "        flag,score = calc_score(kmer)\n",
+        "        if(flag!=1):\n",
+        "            embedding[score]+=1\n",
+        "\n",
+        "    embedding = embedding.tolist()\n",
+        "    big_matrix.append(embedding)"
+      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "yA1Gm8YLy5fA"
-      },
       "source": [
         "def calc_score(examplesequence):\n",
         "\n",
@@ -260,37 +279,9 @@
         "\n",
         "calc_score(\"CATCGAG\")"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
-        "id": "IfZYG8IxoFLZ"
+        "id": "FV_Az2knJtNA"
       },
-      "source": [
-        "k=7\n",
-        "big_matrix = []\n",
-        "sequences_name = []\n",
-        "\n",
-        "fasta_sequences = SeqIO.parse(open(\"sequences.fasta\"),'fasta')\n",
-        "\n",
-        "for fasta in tqdm(fasta_sequences):\n",
-        "\n",
-        "    embedding = np.zeros(4**k, dtype=int)\n",
-        "    sequence = str(fasta.seq)\n",
-        "    sequence_name = fasta.id\n",
-        "    sequences_name.append(sequence_name)\n",
-        "\n",
-        "    for j in range(len(sequence)-k+1):\n",
-        "        kmer = sequence[j:j+k]\n",
-        "        flag,score = calc_score(kmer)\n",
-        "        if(flag!=1):\n",
-        "            embedding[score]+=1\n",
-        "\n",
-        "    embedding = embedding.tolist()\n",
-        "    big_matrix.append(embedding)"
-      ],
       "execution_count": null,
       "outputs": []
     },
@@ -523,15 +514,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Yn16NRvn2UlY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "us4Joar_pEcB"
       },
@@ -573,26 +555,74 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "For  other new observations"
+      ],
       "metadata": {
-        "id": "5lAqP15J5pz6"
+        "id": "Mm0UuJtcKpJ5"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.manifold import TSNE\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Load dataset\n",
+        "df = pd.read_csv(\"INDIA_685.csv\")\n",
+        "\n",
+        "# Save labels for coloring\n",
+        "labels = df['State'].values\n",
+        "\n",
+        "# Drop the 'State' column from features\n",
+        "df_features = df.drop(columns=['State'])\n",
+        "\n",
+        "# Separate numeric and categorical columns\n",
+        "numeric_cols = df_features.select_dtypes(include=['number']).columns\n",
+        "categorical_cols = df_features.select_dtypes(exclude=['number']).columns\n",
+        "\n",
+        "# Encode categorical columns into numeric (0/1)\n",
+        "encoder = OneHotEncoder(handle_unknown='ignore', sparse_output=False)\n",
+        "encoded_cats = encoder.fit_transform(df_features[categorical_cols])\n",
+        "\n",
+        "# Combine numeric + encoded categorical\n",
+        "X = np.hstack([df_features[numeric_cols].values, encoded_cats])\n",
+        "\n",
+        "# Adjustable t-SNE parameters\n",
+        "perplexity_value = 35\n",
+        "iterations_value = 1500\n",
+        "\n",
+        "# Apply t-SNE\n",
+        "tsne = TSNE(n_components=2, perplexity=perplexity_value,\n",
+        "            max_iter=iterations_value, random_state=42)\n",
+        "X_embedded = tsne.fit_transform(X)\n",
+        "\n",
+        "# Plot\n",
+        "plt.figure(figsize=(10,6))\n",
+        "states = sorted(set(labels))\n",
+        "colors = plt.cm.get_cmap('tab10', len(states))\n",
+        "\n",
+        "for idx, state in enumerate(states):\n",
+        "    mask = labels == state\n",
+        "    plt.scatter(X_embedded[mask, 0], X_embedded[mask, 1],\n",
+        "                label=state, s=50, alpha=0.8, color=colors(idx))\n",
+        "\n",
+        "plt.legend()\n",
+        "plt.title(f\"t-SNE Visualization of SARS-CoV-2 Samples by State\\n\"\n",
+        "          f\"(Perplexity={perplexity_value}, Iterations={iterations_value})\", fontsize=14)\n",
+        "plt.xlabel(\"t-SNE Dimension 1\")\n",
+        "plt.ylabel(\"t-SNE Dimension 2\")\n",
+        "plt.grid(True, linestyle=\"--\", alpha=0.5)\n",
+        "plt.show()"
+      ],
       "metadata": {
-        "id": "ppKDlJmo5s8N"
+        "id": "aK6lk0V3KnFY"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "drf3mjff5dua"
-      }
     },
     {
       "cell_type": "markdown",
@@ -814,6 +844,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "For t-SNE"
+      ],
+      "metadata": {
+        "id": "HxofO6QAK7e2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.manifold import TSNE\n",
@@ -829,7 +868,7 @@
         "tsne_data_mutation = model.fit_transform(df)"
       ],
       "metadata": {
-        "id": "5Agslhoj1dLH"
+        "id": "nb0dcsAFLDop"
       },
       "execution_count": null,
       "outputs": []
@@ -854,7 +893,7 @@
         "final_df_mutation.tail()"
       ],
       "metadata": {
-        "id": "n2Z5jw631bYQ"
+        "id": "hebm9xlmLLFA"
       },
       "execution_count": null,
       "outputs": []
@@ -886,10 +925,19 @@
         "fig_mutation.show(renderer = 'colab')"
       ],
       "metadata": {
-        "id": "HugY90Tb1Qi6"
+        "id": "ujT2-JT5LPXB"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ISOMAP"
+      ],
+      "metadata": {
+        "id": "hiXiBkEwL7kN"
+      }
     },
     {
       "cell_type": "code",
@@ -905,7 +953,7 @@
         "isomap_data_kmer = iso_model_kmer.fit_transform(big_matrix)"
       ],
       "metadata": {
-        "id": "6QH-YrETyT6e"
+        "id": "X1mUbfmFLcQE"
       },
       "execution_count": null,
       "outputs": []
@@ -930,7 +978,7 @@
         "final_df_isomap_kmer.tail()"
       ],
       "metadata": {
-        "id": "f37tnQFY1o3K"
+        "id": "TSy899EgLiLJ"
       },
       "execution_count": null,
       "outputs": []
@@ -962,7 +1010,7 @@
         "fig_isomap_kmer.show(renderer = 'colab')"
       ],
       "metadata": {
-        "id": "Bine7dmU1qY-"
+        "id": "77exR8nvLkjf"
       },
       "execution_count": null,
       "outputs": []
@@ -981,7 +1029,7 @@
         "isomap_data_mutation = iso_model_mutation.fit_transform(df)"
       ],
       "metadata": {
-        "id": "55PwCwpS1v17"
+        "id": "CVF2HYRfLmx6"
       },
       "execution_count": null,
       "outputs": []
@@ -1006,7 +1054,7 @@
         "final_df_isomap_mutation.tail()"
       ],
       "metadata": {
-        "id": "jBIUFUf4118S"
+        "id": "pFzJN844Lxob"
       },
       "execution_count": null,
       "outputs": []
@@ -1038,7 +1086,7 @@
         "fig_isomap_mutation.show(renderer = 'colab')"
       ],
       "metadata": {
-        "id": "aqOxTGGG13ic"
+        "id": "125EXrRVLz08"
       },
       "execution_count": null,
       "outputs": []
@@ -1086,13 +1134,6 @@
         "Best of luck for the next Module!\n",
         "---"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "qvXjyfQuyl26"
-      }
     }
   ]
 }
