--- a/AIML_Implementing_forward_propagation_and_back_propagation.ipynb
+++ b/AIML_Implementing_forward_propagation_and_back_propagation.ipynb
@@ -48,6 +48,15 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J1FmQ-pJX86j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "cITrZ24Da21u"
@@ -149,7 +158,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4056ae6-f12a-49f2-a1f3-aa66d1a8b860"
+        "outputId": "42a6e456-703c-4883-a6a1-d602239dfa4b"
       },
       "source": [
         "# Set manual seed\n",
@@ -161,7 +170,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7e7844448490>"
+              "<torch._C.Generator at 0x7c38a58a4490>"
             ]
           },
           "metadata": {},
@@ -176,7 +185,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ff354a2-5e0f-4744-a6ce-d25c53cb0616"
+        "outputId": "cc886b54-5d29-48ac-9931-41b6a9d00560"
       },
       "source": [
         "print(X.size())\n",
@@ -224,7 +233,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed9c9082-c685-4785-ce1e-fcff0d6034e7"
+        "outputId": "51ac4df8-d4ac-461b-abd7-cc6d84e0b6e7"
       },
       "source": [
         "print(X.size())\n",
@@ -249,7 +258,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e4df43f-4deb-4d05-fe68-9d376db17029"
+        "outputId": "a9529a20-96bc-40b8-9f50-7b95b07f5321"
       },
       "source": [
         "print(torch.randn(2, 32).size())"
@@ -374,7 +383,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62c1c0be-f77d-4054-d67a-185b511339f8"
+        "outputId": "49a83e46-88e0-495b-dbd6-a4c2a5131e42"
       },
       "source": [
         "# Instantiate our model class and assign it to our model object\n",
@@ -442,7 +451,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "22ffd708-f227-421c-b5c3-9b87103967fe"
+        "outputId": "7c8e0d69-aaf3-470b-fd7e-9c4bec0ada13"
       },
       "source": [
         "# Plotting loss\n",
